<resources>
    <string name="app_name">CU Events</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="display_name_hint">Display Name</string>
    <string name="create_account_btn">Create Account</string>
    <string name="event_title_txt">Event Title</string>
    <string name="description_txt">Description</string>
    <string name="campus_txt">Campus</string>
    <string name="address_txt">Address</string>
    <string name="start_date_txt">Start Date</string>
    <string name="end_dateTxt">End Date</string>
    <string name="logout">Logout</string>
    <string name="add_event_txt">Add Event</string>
    <string name="upload_image_btn">Upload Image</string>
    <string name="add_to_calendar_btn">Add To Calendar</string>
</resources>
